--- a/01_couplage.ipynb
+++ b/01_couplage.ipynb
@@ -175,6 +175,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![couplage](images/couplage2.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# RECAPITULATIF DE TOUTES LES EQUATIONS DU SYSTEME\n",
+    "\n",
+    "\n",
+    "\\begin{equation}\n",
+    "C_s h_s\\frac{\\partial T_s}{\\partial t}=(1-\\alpha)R_g+ R_{atm} -\\epsilon\\sigma T_s^{4}-H_v(T_s-T_{ext})-r_{s/d}(T_s-T_f)\n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "((1-\\phi) C_d h_d + \\phi C_f h_d ) \\frac {\\partial T_f}{\\partial t} + K_p C_f h_d \\frac {\\partial T_f}{\\partial x}=r_{s/d}(T_s-T_f) - r_{d/b}(T_f-T_b)\n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "C_b h_b\\frac{\\partial T_b}{\\partial t}=r_{d/b}(T_f-T_b)\n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "T_{inj\\_dro} = T_{sor\\_dro} - eff * (T_{sor\\_dro} - T_{sor\\_sto})\n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "T_{inj\\_sto}  =  \\frac{ (m_{sto} * Cp_{sto} + \\frac{k}{2})  T_{sor\\_sto} - k T_{stock} }{m_{sto} * Cp_{sto} - \\frac{k}{2}}\n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "T_{sor\\_sto} = \\frac{k T_{stock} + B * T_{sor\\_dro}}{k+B}\n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "T_{sor\\_pac} = T_{inj\\_pac} - \\frac{P_{geo}}{m_{pac} * Cp_{pac}}\n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "T_{inj\\_pac}  = T_{stock}-\\frac{C Pgeo}{k}\n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    m_{sable} Cp_{sable} \\frac {dT_{stock}}{dt}=m_{sto} Cp_{sto} ( T_{inj\\_sto} - T_{sor\\_sto} ) + m_{pac} Cp_{pac} (T_{sor\\_pac}- T_{inj\\_pac})\n",
+    "\\end{equation}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -198,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
