--- a/01_couplage.ipynb
+++ b/01_couplage.ipynb
@@ -187,6 +187,8 @@
    "source": [
     "# RECAPITULATIF DE TOUTES LES EQUATIONS DU SYSTEME\n",
     "\n",
+    "## Dromotherm\n",
+    "\n",
     "\n",
     "\\begin{equation}\n",
     "C_s h_s\\frac{\\partial T_s}{\\partial t}=(1-\\alpha)R_g+ R_{atm} -\\epsilon\\sigma T_s^{4}-H_v(T_s-T_{ext})-r_{s/d}(T_s-T_f)\n",
@@ -200,9 +202,13 @@
     "C_b h_b\\frac{\\partial T_b}{\\partial t}=r_{d/b}(T_f-T_b)\n",
     "\\end{equation}\n",
     "\n",
+    "## Echangeur thermique\n",
+    "\n",
     "\\begin{equation}\n",
     "T_{inj\\_dro} = T_{sor\\_dro} - eff * (T_{sor\\_dro} - T_{sor\\_sto})\n",
     "\\end{equation}\n",
+    "\n",
+    "## Stockage\n",
     "\n",
     "\\begin{equation}\n",
     "T_{inj\\_sto}  =  \\frac{ (m_{sto} * Cp_{sto} + \\frac{k}{2})  T_{sor\\_sto} - k T_{stock} }{m_{sto} * Cp_{sto} - \\frac{k}{2}}\n",
@@ -213,6 +219,7 @@
     "T_{sor\\_sto} = \\frac{k T_{stock} + B * T_{sor\\_dro}}{k+B}\n",
     "\\end{equation}\n",
     "\n",
+    "## PAC\n",
     "\n",
     "\\begin{equation}\n",
     "T_{sor\\_pac} = T_{inj\\_pac} - \\frac{P_{geo}}{m_{pac} * Cp_{pac}}\n",
@@ -221,6 +228,21 @@
     "\\begin{equation}\n",
     "T_{inj\\_pac}  = T_{stock}-\\frac{C Pgeo}{k}\n",
     "\\end{equation}\n",
+    "\n",
+    "## Température stockage\n",
+    "###  1er cas :Dromotherm seul en marche \n",
+    "\n",
+    "\\begin{equation}\n",
+    "    m_{sable} Cp_{sable} \\frac {dT_{stock}}{dt}=m_{sto} Cp_{sto} ( T_{inj\\_sto} - T_{sor\\_sto} )\n",
+    "\\end{equation}\n",
+    "\n",
+    "### 2ème cas :PAC seule  en marche\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    m_{sable} Cp_{sable} \\frac {dT_{stock}}{dt}= m_{pac} Cp_{pac} (T_{sor\\_pac}- T_{inj\\_pac})\n",
+    "\\end{equation}\n",
+    "\n",
+    "### 3me cas : Dromotherm et PAC en marche\n",
     "\n",
     "\\begin{equation}\n",
     "    m_{sable} Cp_{sable} \\frac {dT_{stock}}{dt}=m_{sto} Cp_{sto} ( T_{inj\\_sto} - T_{sor\\_sto} ) + m_{pac} Cp_{pac} (T_{sor\\_pac}- T_{inj\\_pac})\n",
