--- a/01_couplage.ipynb
+++ b/01_couplage.ipynb
@@ -195,11 +195,15 @@
     "\\end{equation}\n",
     "\n",
     "\\begin{equation}\n",
-    "((1-\\phi) C_d h_d + \\phi C_f h_d ) \\frac {\\partial T_f}{\\partial t} + K_p C_f h_d \\frac {\\partial T_f}{\\partial x}=r_{s/d}(T_s-T_f) - r_{d/b}(T_f-T_b)\n",
+    "((1-\\phi) C_d h_d + \\phi C_f h_d ) \\frac {\\partial T_f}{\\partial t} + K_p C_f h_d \\frac {\\partial T_f}{\\partial x}=r_{s/d}(T_s-T_f) - r_{d/b1}(T_f-T_{b1})\n",
     "\\end{equation}\n",
     "\n",
     "\\begin{equation}\n",
-    "C_b h_b\\frac{\\partial T_b}{\\partial t}=r_{d/b}(T_f-T_b)\n",
+    "C_b h_{b1}\\frac{\\partial T_{b1}}{\\partial t}=r_{d/b1}(T_f-T_{b1})- r_{b1/b2}(T_{b1}-T_{b2})\n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "C_b h_{b2}\\frac{\\partial T_{b2}}{\\partial t}= r_{b1/b2}(T_{b1}-T_{b2})\n",
     "\\end{equation}\n",
     "\n",
     "## Echangeur thermique\n",
@@ -246,7 +250,12 @@
     "\n",
     "\\begin{equation}\n",
     "    m_{sable} Cp_{sable} \\frac {dT_{stock}}{dt}=m_{sto} Cp_{sto} ( T_{inj\\_sto} - T_{sor\\_sto} ) + m_{pac} Cp_{pac} (T_{sor\\_pac}- T_{inj\\_pac})\n",
-    "\\end{equation}"
+    "\\end{equation}\n",
+    "\n",
+    "## Bâtiment\n",
+    "\\begin{equation} \n",
+    "   besoin=(Tconsigne-Text)*(\\frac {1}{Rm+Ri}+ \\frac {1}{Rf} )\n",
+    "\\end{equation}\n"
    ]
   },
   {
