--- a/01_couplage.ipynb
+++ b/01_couplage.ipynb
@@ -171,6 +171,92 @@
     "\n",
     "\\begin{equation}\n",
     "C  = 1-\\frac{k}{2 m_{pac} Cp_{pac}}\n",
+    "\\end{equation}\n",
+    "\n",
+    "\n",
+    "## Bâtiment\n",
+    "\n",
+    "Calcule les besoins du bâtiment avec le modèle RC.\n",
+    "On note:\n",
+    "\n",
+    "- Tconsigne : température de consigne en °C\n",
+    "\n",
+    "- Text : vecteur numpy de la température extérieure\n",
+    "\n",
+    "- Rm : Résistance thermique des murs (K/W)\n",
+    "\n",
+    "- Ri : Résistance superficielle intérieure (K/W)\n",
+    "\n",
+    "- Rf : résistance de fuite (infiltrations+vitre+renouvellement d'air) K/W\n",
+    "\n",
+    "\n",
+    "Par analogie électrique, on assimile les températures à des tensions et les puissances à des intensités\n",
+    "en première approximation, on a donc :\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    \\frac {T_{int}-T_{ext}}{R_m+R_i}+ \\frac {T_c -T_{ext}}{R_f} + C \\frac{dT_{int}}{dt}=Qchauffage=besoin\n",
+    "\\end{equation}\n",
+    "\n",
+    "Soit\n",
+    "\\begin{equation}\n",
+    "    C \\frac{dT_{int}}{dt}=Qchauffage- \\frac {T_{int}-T_{ext}}{R_m+R_i}-\\frac {T_c -T_{ext}}{R_f} \n",
+    "\\end{equation}\n",
+    "\n",
+    "C dTint/dt = Qchauffage - (Tint-Text) * (1/(Rm+Ri) + 1/Rf)\n",
+    "Pour maintenir Tint constante et égale à Tconsigne, on doit donc développer :\n",
+    "Qchauffage = (Tconsigne-Text) * (1/(Rm+Ri) + 1/Rf)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\\begin{equation} \n",
+    "   besoin=(Tconsigne-Text)*(\\frac {1}{Rm+Ri}+ \\frac {1}{Rf} )\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bâtiment\n",
+    "\n",
+    "![ Schema RC](images/RC_.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calcule des besoins du bâtiment avec le modèle RC.\n",
+    "On note:\n",
+    "\n",
+    "- Tconsigne : température de consigne en °C\n",
+    "\n",
+    "- Text : vecteur numpy de la température extérieure\n",
+    "\n",
+    "- Rm : Résistance thermique des murs (K/W)\n",
+    "\n",
+    "- Ri : Résistance superficielle intérieure (K/W)\n",
+    "\n",
+    "- Rf : résistance de fuite (infiltrations+vitre+renouvellement d'air) K/W\n",
+    "\n",
+    "\n",
+    "Par analogie électrique, on assimile les températures à des tensions et les puissances à des intensités\n",
+    "en première approximation, on a donc :\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    \\frac {T_{int}-T_{ext}}{R_m+R_i}+ \\frac {T_c -T_{ext}}{R_f} + C \\frac{dT_{int}}{dt}=Qchauffage=besoin\n",
+    "\\end{equation}\n",
+    "\n",
+    "Soit\n",
+    "\\begin{equation}\n",
+    "    C \\frac{dT_{int}}{dt}=Qchauffage- \\frac {T_{int}-T_{ext}}{R_m+R_i}-\\frac {T_c -T_{ext}}{R_f} \n",
+    "\\end{equation}\n",
+    "\n",
+    "\n",
+    "Pour maintenir Tint constante et égale à Tconsigne, on doit donc développer :\n",
+    "\n",
+    "\\begin{equation} \n",
+    "   Qchauffage=(Tconsigne-Text)*(\\frac {1}{Rm+Ri}+ \\frac {1}{Rf} )\n",
     "\\end{equation}"
    ]
   },
@@ -191,7 +277,7 @@
     "\n",
     "\n",
     "\\begin{equation}\n",
-    "C_s h_s\\frac{\\partial T_s}{\\partial t}=(1-\\alpha)R_g+ R_{atm} -\\epsilon\\sigma T_s^{4}-H_v(T_s-T_{ext})-r_{s/d}(T_s-T_f)\n",
+    "C_s h_s\\frac{\\partial T_s}{\\partial t}=(1-\\alpha)R_g(t)+ R_{atm}(t) -\\epsilon\\sigma T_s^{4}-H_v(T_s-T_{ext}(t))-r_{s/d}(T_s-T_f)\n",
     "\\end{equation}\n",
     "\n",
     "\\begin{equation}\n",
@@ -259,11 +345,132 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# SCHEMA NUMERIQUE\n",
+    "\n",
+    "Soient i et n, les indices respectifs de l'espace et du temps.\n",
+    "Nous allons procéder à un maillage en espace et en temps.\n",
+    "\n",
+    "## Dromotherm\n",
+    "Le schema numérique se résume à :\n",
+    "\\begin{equation} \n",
+    "   T_{sor\\_dro}(t_i)=D(t_i,T(t_{i-1}),T_{inj\\_dro}(t_{i-1})\n",
+    "\\end{equation}\n",
+    "\n",
+    "avec \n",
+    "\\begin{equation} \n",
+    "   T(t_i)=[Ts(t_i),Tf(t_i),Tb1(t_i),Tb2(t_i)]\n",
+    "\\end{equation}\n",
+    "\n",
+    "## Echangeur thermique\n",
+    "\n",
+    "\\begin{equation}\n",
+    "T_{inj\\_dro}(t_i) = T_{sor\\_dro}(t_i) - eff * (T_{sor\\_dro}(t_i) - T_{sor\\_sto}(t_i))\n",
+    "\\end{equation}\n",
+    "\n",
+    "\n",
+    "## Stockage\n",
+    "\n",
+    "\\begin{equation}\n",
+    "T_{inj\\_sto}(t_i)  =  \\frac{ (m_{sto} * Cp_{sto} + \\frac{k}{2})  T_{sor\\_sto}(t_i) - k T_{stock}(t_i) }{m_{sto} * Cp_{sto} - \\frac{k}{2}}\n",
+    "\\end{equation}\n",
+    "\n",
+    "\n",
+    "\\begin{equation}\n",
+    "T_{sor\\_sto}(t_i) = \\frac{k T_{stock}(t_i) + B * T_{sor\\_dro}(t_i)}{k+B}\n",
+    "\\end{equation}\n",
+    "\n",
+    "## PAC\n",
+    "\n",
+    "\\begin{equation}\n",
+    "T_{inj\\_pac}(t_i)  = T_{stock}(t_i)-\\frac{C Pgeo(t_i)}{k}\n",
+    "\\end{equation}\n",
+    "\n",
+    "\n",
+    "\\begin{equation}\n",
+    "T_{sor\\_pac}(t_i) = T_{inj\\_pac}(t_i) - \\frac{P_{geo}(t_i)}{m_{pac} * Cp_{pac}}\n",
+    "\\end{equation}\n",
+    "\n",
+    "\n",
+    "## Température stockage\n",
+    "\n",
+    "Les équations régissant la température du stockage dans chaque est une équation différentielle d'ordre 1 sous la forme:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "     \\frac {dT_{stock}}{dt}= F (t,T_{stock})\n",
+    "\\end{equation}\n",
+    "\n",
+    "Elle peut se résoudre suivant la méthode de Runge Kutta 4.La méthode RK4 est donnée par l'équation :\n",
+    "\n",
+    "\\begin{equation}\n",
+    "     T_{stock}(t_{i})= T_{stock}(t_{i-1})+\\frac {dt}{6} (k_1+2 k_2+ 2 k_3 + k_4)\n",
+    "\\end{equation}\n",
+    "\n",
+    "avec \n",
+    "\n",
+    "\\begin{equation}\n",
+    "     k_1=F (t_{i-1},T_{stock}(t_{i-1}))\n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "     k_2=F (t_{i-1}+\\frac {dt}{2},T_{stock}(t_{i-1})+\\frac {dt}{6} *k_1)\n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "     k_3=F (t_{i-1}+\\frac {dt}{2},T_{stock}(t_{i-1})+\\frac {dt}{6}* k_2)\n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "     k_4=F (t_{i-1}+ dt,T_{stock}(t_{i-1})+ dt*k_3)\n",
+    "\\end{equation}\n",
+    "\n",
+    "## Bâtiment\n",
+    "\\begin{equation} \n",
+    "   besoin(t_i)=(Tconsigne-Text(t_i))*(\\frac {1}{Rm+Ri}+ \\frac {1}{Rf} )\n",
+    "\\end{equation}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ALGORITHME DE RESOLUTION\n",
+    "\n",
+    "## Phase d'initialisation ( à t=0)\n",
+    " A l'instant initial, tout le système est suposé être à l'arrêt et toutes les températures égales à une valeur $T_{ini}$\n",
+    " \n",
+    " ## Phase itérative ( t>0)\n",
+    " \n",
+    " La procédure itérative de calcul des inconnues se présente comme suit:\n",
+    "\n",
+    "### En été (le dromotherm en marche)\n",
+    "\n",
+    "1. Calculer $T_{sor\\_dro}(t_i)$ en fonction de $T_{inj\\_dro}(t_{i-1})$\n",
+    "\n",
+    "2. Calculer $T_{sor\\_sto}(t_i)$ en fonction de $T_{stock}(t_{i-1})$ et $T_{sor\\_dro}(t_i)$\n",
+    "\n",
+    "3. Calculer $T_{inj\\_dro}(t_{i})$ en fonction de $ T_{sor\\_sto}(t_i) $ et $ T_{sor\\_dro}(t_i) $\n",
+    "\n",
+    "4. Calculer $T_{stock}(t_{i})$ par la méthode de RK4\n",
+    "\n",
+    "5. La procédure recommence à l'étape 1\n",
+    "\n",
+    "### En hivers (la PAC en marche)\n",
+    "\n",
+    "1. Calculer le $besoin(t_i)$ du bâtiment en fonction de la température extérieure et de la température de consigne\n",
+    "\n",
+    "2. Calculer la puissance géothermique $ P_{geo}(t_i) $ en fonction de $besoin(t_i) $\n",
+    "\n",
+    "3. Calculer $T_{stock}(t_{i})$ par la méthode de RK4\n",
+    "\n",
+    "4. Calculer $ T_{inj\\_pac}(t_i) $ en fonction de  $T_{stock}(t_{i})$ et  $P_{geo}(t_i) $\n",
+    "\n",
+    "5. Calculer $T_{sor\\_pac}(t_i) $ en fonction de $ T_{inj\\_pac}(t_i) $ et $ P_{geo}(t_i) $\n",
+    "\n",
+    "6. La procédure recommence à l'étape 1\n"
+   ]
   }
  ],
  "metadata": {
