--- a/01_couplage.ipynb
+++ b/01_couplage.ipynb
@@ -198,18 +198,17 @@
     "\\end{equation}\n",
     "\n",
     "Soit\n",
+    "\n",
     "\\begin{equation}\n",
     "    C \\frac{dT_{int}}{dt}=Qchauffage- \\frac {T_{int}-T_{ext}}{R_m+R_i}-\\frac {T_c -T_{ext}}{R_f} \n",
     "\\end{equation}\n",
     "\n",
     "C dTint/dt = Qchauffage - (Tint-Text) * (1/(Rm+Ri) + 1/Rf)\n",
+    "\n",
     "Pour maintenir Tint constante et égale à Tconsigne, on doit donc développer :\n",
-    "Qchauffage = (Tconsigne-Text) * (1/(Rm+Ri) + 1/Rf)\n",
-    "\n",
-    "\n",
     "\n",
     "\\begin{equation} \n",
-    "   besoin=(Tconsigne-Text)*(\\frac {1}{Rm+Ri}+ \\frac {1}{Rf} )\n",
+    "   Qchauffage=(Tconsigne-Text)*(\\frac {1}{Rm+Ri}+ \\frac {1}{Rf} )\n",
     "\\end{equation}"
    ]
   },
@@ -264,14 +263,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![couplage](images/couplage2.jpg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# RECAPITULATIF DE TOUTES LES EQUATIONS DU SYSTEME\n",
+    "\n",
+    "![couplage](images/couplage2.jpg)\n",
     "\n",
     "## Dromotherm\n",
     "\n",
