--- a/01_couplage.ipynb
+++ b/01_couplage.ipynb
@@ -308,8 +308,7 @@
    "source": [
     "# SCHEMA NUMERIQUE\n",
     "\n",
-    "Soient i et n, les indices respectifs de l'espace et du temps.\n",
-    "Nous allons procéder à un maillage en espace et en temps.\n",
+    "Soit $t_i $, l'instant courant.\n",
     "\n",
     "## Dromotherm\n",
     "Le schema numérique se résume à :\n",
