--- a/01_couplage.ipynb
+++ b/01_couplage.ipynb
@@ -182,7 +182,7 @@
    "source": [
     "## Bâtiment\n",
     "\n",
-    "![ Schema RC](images/RC_.png)"
+    "![Schema RC](images/RC_.png)"
    ]
   },
   {
@@ -210,7 +210,8 @@
     "    \\frac {T_{int}-T_{ext}}{R_m+R_i}+ \\frac {T_c -T_{ext}}{R_f} + C \\frac{dT_{int}}{dt}=Qchauffage=besoin\n",
     "\\end{equation}\n",
     "\n",
-    "Soit\n",
+    "Soit :\n",
+    "\n",
     "\\begin{equation}\n",
     "    C \\frac{dT_{int}}{dt}=Qchauffage- \\frac {T_{int}-T_{ext}}{R_m+R_i}-\\frac {T_c -T_{ext}}{R_f} \n",
     "\\end{equation}\n",
@@ -446,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
