--- a/01_couplage.ipynb
+++ b/01_couplage.ipynb
@@ -182,7 +182,7 @@
    "source": [
     "## Bâtiment\n",
     "\n",
-    "![Schema RC](images/RC_.png)"
+    "![Schema RC](images/RC.png)"
    ]
   },
   {
@@ -313,11 +313,13 @@
     "\n",
     "## Dromotherm\n",
     "Le schema numérique se résume à :\n",
+    "\n",
     "\\begin{equation} \n",
     "   T_{sor\\_dro}(t_i)=D(t_i,T(t_{i-1}),T_{inj\\_dro}(t_{i-1})\n",
     "\\end{equation}\n",
     "\n",
-    "avec \n",
+    "avec :\n",
+    "\n",
     "\\begin{equation} \n",
     "   T(t_i)=[Ts(t_i),Tf(t_i),Tb1(t_i),Tb2(t_i)]\n",
     "\\end{equation}\n",
@@ -366,7 +368,7 @@
     "     T_{stock}(t_{i})= T_{stock}(t_{i-1})+\\frac {dt}{6} (k_1+2 k_2+ 2 k_3 + k_4)\n",
     "\\end{equation}\n",
     "\n",
-    "avec \n",
+    "avec :\n",
     "\n",
     "\\begin{equation}\n",
     "     k_1=F (t_{i-1},T_{stock}(t_{i-1}))\n",
@@ -385,6 +387,7 @@
     "\\end{equation}\n",
     "\n",
     "## Bâtiment\n",
+    "\n",
     "\\begin{equation} \n",
     "   besoin(t_i)=(Tconsigne-Text(t_i))*(\\frac {1}{Rm+Ri}+ \\frac {1}{Rf} )\n",
     "\\end{equation}\n"
