--- a/01_couplage.ipynb
+++ b/01_couplage.ipynb
@@ -189,12 +189,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calcule des besoins du bâtiment avec le modèle RC.\n",
+    "Le bâtiment est assimilé à un modèle R3C.\n",
     "On note:\n",
     "\n",
     "- Tconsigne : température de consigne en °C\n",
     "\n",
-    "- Text : vecteur numpy de la température extérieure\n",
+    "- Text : température extérieure\n",
     "\n",
     "- Rm : Résistance thermique des murs (K/W)\n",
     "\n",
@@ -399,8 +399,8 @@
    "source": [
     "# ALGORITHME DE RESOLUTION\n",
     "\n",
-    "## Phase d'initialisation ( à t=0)\n",
-    " A l'instant initial, tout le système est suposé être à l'arrêt et toutes les températures égales à une valeur $T_{ini}$\n",
+    "## Phase d'initialisation (t=0)\n",
+    " A l'instant initial, tout le système est supposé être à l'arrêt et toutes les températures égales à une valeur $T_{ini}$\n",
     " \n",
     " ## Phase itérative ( t>0)\n",
     " \n",
@@ -432,6 +432,13 @@
     "\n",
     "6. La procédure recommence à l'étape 1\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
