--- a/01_couplage.ipynb
+++ b/01_couplage.ipynb
@@ -180,7 +180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bâtiment\n",
+    "## Bâtiment (Ce modèle est à revoir. L'équation établie semble ne pas être correcte)\n",
     "\n",
     "![Schema RC](images/RC.png)"
    ]
@@ -209,7 +209,7 @@
     "\\begin{equation}\n",
     "    \\frac {T_{int}-T_{ext}}{R_m+R_i}+ \\frac {T_c -T_{ext}}{R_f} + C \\frac{dT_{int}}{dt}=Qchauffage=besoin\n",
     "\\end{equation}\n",
-    "\n",
+    "(Les résistances Ri et Rm ne sont pas en série, on ne saurait donc les sommer)\n",
     "Soit :\n",
     "\n",
     "\\begin{equation}\n",
@@ -299,7 +299,12 @@
     "\n",
     "## Bâtiment\n",
     "\\begin{equation} \n",
-    "   besoin=(Tconsigne-Text)*(\\frac {1}{Rm+Ri}+ \\frac {1}{Rf} )\n",
+    "   besoin_{chauffage}=(Tconsigne-Text)*(\\frac {1}{Rm+Ri}+ \\frac {1}{Rf} )\n",
+    "\\end{equation}\n",
+    "\n",
+    "\n",
+    "\\begin{equation} \n",
+    "   besoin_{ECS}= Volume_{ballon}*N_{pers}*(T_{ballon}-T{eau})*Cp_{eau}/(24*3600)\n",
     "\\end{equation}\n"
    ]
   },
@@ -362,35 +367,19 @@
     "     \\frac {dT_{stock}}{dt}= F (t,T_{stock})\n",
     "\\end{equation}\n",
     "\n",
-    "Elle peut se résoudre suivant la méthode de Runge Kutta 4.La méthode RK4 est donnée par l'équation :\n",
-    "\n",
+    "Suivant la méthode Euler explicite on a :\n",
     "\\begin{equation}\n",
-    "     T_{stock}(t_{i})= T_{stock}(t_{i-1})+\\frac {dt}{6} (k_1+2 k_2+ 2 k_3 + k_4)\n",
+    " T_{stock}(t_{i})=T_{stock}(t_{i})+ dt *F (t_{i-1},T_{stock}(t_{i-1})\n",
     "\\end{equation}\n",
-    "\n",
-    "avec :\n",
-    "\n",
-    "\\begin{equation}\n",
-    "     k_1=F (t_{i-1},T_{stock}(t_{i-1}))\n",
-    "\\end{equation}\n",
-    "\n",
-    "\\begin{equation}\n",
-    "     k_2=F (t_{i-1}+\\frac {dt}{2},T_{stock}(t_{i-1})+\\frac {dt}{6} *k_1)\n",
-    "\\end{equation}\n",
-    "\n",
-    "\\begin{equation}\n",
-    "     k_3=F (t_{i-1}+\\frac {dt}{2},T_{stock}(t_{i-1})+\\frac {dt}{6}* k_2)\n",
-    "\\end{equation}\n",
-    "\n",
-    "\\begin{equation}\n",
-    "     k_4=F (t_{i-1}+ dt,T_{stock}(t_{i-1})+ dt*k_3)\n",
-    "\\end{equation}\n",
-    "\n",
     "## Bâtiment\n",
     "\n",
     "\\begin{equation} \n",
-    "   besoin(t_i)=(Tconsigne-Text(t_i))*(\\frac {1}{Rm+Ri}+ \\frac {1}{Rf} )\n",
-    "\\end{equation}\n"
+    "   besoin_{chauffage}(t_i)=(Tconsigne-Text(t_i))*(\\frac {1}{Rm+Ri}+ \\frac {1}{Rf} )\n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation} \n",
+    "   besoin_{ECS}(t_i)= Volume_{ballon}*N_{pers}*(T_{ballon}-T{eau}(t_i))*Cp_{eau}/(24*3600)\n",
+    "\\end{equation}"
    ]
   },
   {
@@ -405,32 +394,113 @@
     " ## Phase itérative ( t>0)\n",
     " \n",
     " La procédure itérative de calcul des inconnues se présente comme suit:\n",
+    " \n",
+    " ### I- Choix du  fonctionnement du démonstrateur\n",
+    " \n",
+    " Le démonstrateur peut fonctionner de 8  manières. L'utilisateur choisit:\n",
     "\n",
-    "### En été (le dromotherm en marche)\n",
+    "En été:\n",
     "\n",
-    "1. Calculer $T_{sor\\_dro}(t_i)$ en fonction de $T_{inj\\_dro}(t_{i-1})$\n",
+    " 1. Dromotherm ON et PAC ON\n",
+    " \n",
+    " 2. Dromotherm ON et PAC OFF\n",
+    " \n",
+    " 3. Dromotherm OFF et PAC ON\n",
+    " \n",
+    " 4. Dromotherm OFF et PAC OFF\n",
     "\n",
-    "2. Calculer $T_{sor\\_sto}(t_i)$ en fonction de $T_{stock}(t_{i-1})$ et $T_{sor\\_dro}(t_i)$\n",
+    "En hivers:\n",
     "\n",
-    "3. Calculer $T_{inj\\_dro}(t_{i})$ en fonction de $ T_{sor\\_sto}(t_i) $ et $ T_{sor\\_dro}(t_i) $\n",
+    "1. Dromotherm ON et PAC ON\n",
+    " \n",
+    "2. Dromotherm ON et PAC OFF\n",
+    " \n",
+    "3. Dromotherm OFF et PAC ON\n",
+    " \n",
+    "4. Dromotherm OFF et PAC OFF\n",
     "\n",
-    "4. Calculer $T_{stock}(t_{i})$ par la méthode de RK4\n",
+    "NB: PAC ON = chauffage et/ ou ECS\n",
     "\n",
-    "5. La procédure recommence à l'étape 1\n",
     "\n",
-    "### En hivers (la PAC en marche)\n",
     "\n",
-    "1. Calculer le $besoin(t_i)$ du bâtiment en fonction de la température extérieure et de la température de consigne\n",
     "\n",
-    "2. Calculer la puissance géothermique $ P_{geo}(t_i) $ en fonction de $besoin(t_i) $\n",
     "\n",
-    "3. Calculer $T_{stock}(t_{i})$ par la méthode de RK4\n",
     "\n",
-    "4. Calculer $ T_{inj\\_pac}(t_i) $ en fonction de  $T_{stock}(t_{i})$ et  $P_{geo}(t_i) $\n",
+    "### II- Calculer  La variation temporelle de la Température du stockage suivant chaque cas\n",
     "\n",
-    "5. Calculer $T_{sor\\_pac}(t_i) $ en fonction de $ T_{inj\\_pac}(t_i) $ et $ P_{geo}(t_i) $\n",
+    "1. Dromotherm ON et PAC ON\n",
     "\n",
-    "6. La procédure recommence à l'étape 1\n"
+    "   $der=\\frac{m_{sto} Cp{sto} (T_{inj\\_sto}(t_{i})-T_{sor\\_sto}(t_{i}))-P_{geo}(t_i)}{m_{sable} Cp{sable}}  $\n",
+    "  \n",
+    "  \n",
+    "  \n",
+    "2. Dromotherm ON et PAC OFF\n",
+    "   \n",
+    "   $der=\\frac{m_{sto} Cp{sto} (T_{inj\\_sto}(t_{i})-T_{sor\\_sto}(t_{i}))}{m_{sable} Cp{sable}}  $\n",
+    "   \n",
+    "   \n",
+    "   \n",
+    "3. Dromotherm OFF et PAC ON\n",
+    "\n",
+    "    $der=\\frac{-P_{geo}(t_i)}{m_{sable} Cp{sable}}  $\n",
+    "\n",
+    "    \n",
+    "\n",
+    "4. Dromotherm OFF et PAC OFF\n",
+    "\n",
+    "    $der=0$\n",
+    "   \n",
+    "   \n",
+    " ### III- Calculer la Température du stockage par la méthode de Euler explicite\n",
+    " \n",
+    " $T_{stock}(t_{i})=T_{stock}(t_{i})+ dt *der$ \n",
+    " \n",
+    " \n",
+    " \n",
+    " ### IV- Calculer les températures des fluides circulant dans le domotherm, l'échangeur et la PAC\n",
+    " \n",
+    " 1. Si Dromotherm ON\n",
+    " \n",
+    "   Calculer $T_{sor\\_dro}(t_i)$ en fonction de $T_{inj\\_dro}(t_{i-1})$ et du débit unitaire qdro_u\n",
+    " \n",
+    "   Calcluer $T_{sor\\_sto}(t_i)$ par $T_{sor\\_sto}(t_i) = \\frac{k T_{stock}(t_i) + B * T_{sor\\_dro}(t_i)}{k+B}$ \n",
+    "   \n",
+    "   Calculer $T_{inj\\_sto}(t_i)$ par $ T_{inj\\_sto}(t_i) =  \\frac{ (m_{sto} * Cp_{sto} + \\frac{k}{2})  T_{sor\\_sto}(t_i) - k        T_{stock}(t_i) }{m_{sto} * Cp_{sto} - \\frac{k}{2}}$\n",
+    "   \n",
+    "   Calculer $T_{inj\\_dro}(t_i)$ par $T_{inj\\_dro}(t_i) = T_{sor\\_dro}(t_i) - eff * (T_{sor\\_dro}(t_i) - T_{sor\\_sto}(t_i))$\n",
+    "   \n",
+    " \n",
+    " 2. Si Dromotherm OFF\n",
+    " \n",
+    "  Calculer $T_{sor\\_dro}(t_i)$ en fonction de $T_{inj\\_dro}(t_{i-1})$ et du débit nul \n",
+    "  \n",
+    "  Calculer $T_{inj\\_dro}(t_i)$ par $T_{inj\\_dro}(t_i) = T_{sor\\_dro}(t_i-1)$\n",
+    " \n",
+    "  Calcluer $T_{sor\\_sto}(t_i)$ par $T_{sor\\_sto}(t_i) = T_{sor\\_sto}(t_i-1)$ \n",
+    "   \n",
+    "  Calculer $T_{inj\\_sto}(t_i)$ par $ T_{inj\\_sto}(t_i) = T_{inj\\_sto}(t_i-1) $     \n",
+    "  \n",
+    "  \n",
+    " 3. Si la PAC ON\n",
+    " \n",
+    " Calculer $T_{inj\\_pac}(t_i)$ par  $T_{inj\\_pac}(t_i) = T_{stock}(t_i)-\\frac{C Pgeo(t_i)}{k}$\n",
+    " \n",
+    " Calculer $T_{sor\\_pac}(t_i)$ par   $T_{sor\\_pac}(t_i)= T_{inj\\_pac}(t_i) - \\frac{P_{geo}(t_i)}{m_{pac} * Cp_{pac}}$\n",
+    " \n",
+    " \n",
+    " 4. Si la PAC OFF\n",
+    " \n",
+    " Calculer $T_{inj\\_pac}(t_i)$ par  $T_{inj\\_pac}(t_i) = T_{inj\\_pac}(t_i-1)$\n",
+    " \n",
+    " Calculer $T_{sor\\_pac}(t_i)$ par   $T_{sor\\_pac}(t_i)= T_{sor\\_pac}(t_i-1)$\n",
+    " \n",
+    " La procédure recommence à l'étape I\n",
+    "\n",
+    "\n",
+    "\n",
+    " \n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -457,7 +527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
