--- a/01_couplage.ipynb
+++ b/01_couplage.ipynb
@@ -180,7 +180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bâtiment (Ce modèle est à revoir. L'équation établie semble ne pas être correcte)\n",
+    "## Bâtiment \n",
     "\n",
     "![Schema RC](images/RC.png)"
    ]
@@ -190,7 +190,7 @@
    "metadata": {},
    "source": [
     "Le bâtiment est assimilé à un modèle R3C.\n",
-    "On note:\n",
+    "On note :\n",
     "\n",
     "- Tconsigne : température de consigne en °C\n",
     "\n",
@@ -209,7 +209,6 @@
     "\\begin{equation}\n",
     "    \\frac {T_{int}-T_{ext}}{R_m+R_i}+ \\frac {T_c -T_{ext}}{R_f} + C \\frac{dT_{int}}{dt}=Qchauffage=besoin\n",
     "\\end{equation}\n",
-    "(Les résistances Ri et Rm ne sont pas en série, on ne saurait donc les sommer)\n",
     "Soit :\n",
     "\n",
     "\\begin{equation}\n",
