--- a/01_couplage.ipynb
+++ b/01_couplage.ipynb
@@ -182,7 +182,7 @@
    "source": [
     "## Bâtiment \n",
     "\n",
-    "![Schema RC](images/RC.png)"
+    "![Schema RC](images/R3C.png)"
    ]
   },
   {
