couplage notebook improvment 2

--- a/01_couplage.ipynb
+++ b/01_couplage.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Equilibre énergétique de l'échangeur\n",
+    "# Equilibre énergétique de l'échangeur de séparation de réseau\n",
     "\n",
     "On note :\n",
     "- $m_{dro}$ le débit massique du fluide dans le dromotherme en $\\frac{kg}{s}$\n",
@@ -24,7 +24,7 @@
     "\n",
     "On pose $coeff = \\frac{m_{dro} * Cp_{dro}}{m_{sto} * Cp_{sto}}$\n",
     "\n",
-    "## Cas 1 : $coeff <= 1$\n",
+    "**On ne va s'intéresser qu'à un seul cas de figure : $coeff <= 1$**\n",
     "\n",
     "On a\n",
     "\n",
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Echanges énérgétiques au niveau du système géothermique équipant le système de stockage\n",
+    "# Echanges énergétiques au niveau du système géothermique équipant le système de stockage\n",
     "\n",
     "Si k est le coefficient du système énergétique exprimé en W/K, et en notant y la température dans le massif de stockage, on a :\n",
     "\n",
@@ -80,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bilan\n",
+    "# Bilan dromotherme/stockage\n",
     "\n",
     "On obtient 2 expressions de $T_{inj\\_sto}$, permettant ainsi de formuler $T_{sor\\_sto}$ fonction de y et de $T_{sor\\_dro}$ seulement :\n",
     "\n",
@@ -124,13 +124,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Couplage avec la PAC\n",
+    "# Mise en oeuvre de la PAC\n",
     "\n",
     "\n",
     "On note :\n",
     "\n",
-    "- $P_{geo}$ la puissance géothermique extraite en  W\n",
-    "- $besoin$ le besoin en chauffage du bâtiment en W\n",
+    "- $P_{geo}$ la puissance géothermique à extraire du stockage en  W\n",
+    "- $besoin$ le besoin énergétique du bâtiment à satisfaire en W\n",
     "- $P_{elec}$ la puissance électrique de la PAC en  W\n",
     "- COP  le coefficient de performance de la PAC\n",
     "\n",
@@ -172,7 +172,6 @@
     "\\begin{equation}\n",
     "C  = 1-\\frac{k}{2 m_{pac} Cp_{pac}}\n",
     "\\end{equation}\n",
-    "\n",
     "\n"
    ]
   },
@@ -180,7 +179,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bâtiment \n",
+    "# Besoin du bâtiment \n",
+    "\n",
+    "## cas du chauffage\n",
     "\n",
     "![Schema RC](images/RC_simple.png)"
    ]
@@ -192,37 +193,39 @@
     "Le bâtiment est assimilé à un modèle R3C.\n",
     "On note :\n",
     "\n",
-    "- Tconsigne : température de consigne en °C\n",
+    "- $Q_{chauffage}$ le besoin instantanné de chauffage en W\n",
     "\n",
-    "- Tint : température intérieure en °C\n",
+    "- $T_{consigne}$ : température de consigne en °C\n",
     "\n",
-    "- Text : température extérieure en °C\n",
+    "- $T_{int}$ : température intérieure en °C\n",
     "\n",
-    "- Rm : Résistance thermique des murs (K/W)\n",
+    "- $T_{ext}$ : température extérieure en °C\n",
     "\n",
-    "- Ri : Résistance superficielle intérieure (K/W)\n",
+    "- $R_m$ : Résistance thermique des murs (K/W)\n",
     "\n",
-    "- Rf : résistance de fuite (infiltrations+vitre+renouvellement d'air) K/W\n",
+    "- $R_i$ : Résistance superficielle intérieure (K/W)\n",
+    "\n",
+    "- $R_f$ : résistance de fuite (infiltrations+vitre+renouvellement d'air) K/W\n",
     "\n",
     "\n",
     "Par analogie électrique, on assimile les températures à des tensions et les puissances à des intensités\n",
     "en première approximation, on a donc :\n",
     "\n",
     "\\begin{equation}\n",
-    "    \\frac {T_{int}-T_{ext}}{R_m+R_i}+ \\frac {T_{int} -T_{ext}}{R_f} + C \\frac{dT_{int}}{dt}=Qchauffage=besoin\n",
+    "    \\frac {T_{int}-T_{ext}}{R_m+R_i}+ \\frac {T_{int} -T_{ext}}{R_f} + C \\frac{dT_{int}}{dt}=Q_{chauffage}\n",
     "\\end{equation}\n",
     "\n",
     "Soit :\n",
     "\n",
     "\\begin{equation}\n",
-    "    C \\frac{dT_{int}}{dt}=Qchauffage- \\frac {T_{int}-T_{ext}}{R_m+R_i}-\\frac {T_{int} -T_{ext}}{R_f} \n",
+    "    C \\frac{dT_{int}}{dt} = Q_{chauffage} - \\frac {T_{int}-T_{ext}}{R_m+R_i}-\\frac {T_{int} -T_{ext}}{R_f} \n",
     "\\end{equation}\n",
     "\n",
     "\n",
     "Pour maintenir Tint constante et égale à Tconsigne, on doit donc développer :\n",
     "\n",
     "\\begin{equation} \n",
-    "   Qchauffage=(Tconsigne-Text)*(\\frac {1}{Rm+Ri}+ \\frac {1}{Rf} )\n",
+    "   Q_{chauffage} = (Tconsigne-Text)*(\\frac {1}{Rm+Ri}+ \\frac {1}{Rf} )\n",
     "\\end{equation}"
    ]
   },
@@ -230,12 +233,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# RECAPITULATIF DE TOUTES LES EQUATIONS DU SYSTEME\n",
+    "## cas de l'eau chaude sanitaire ECS\n",
     "\n",
-    "![couplage](images/couplage2.jpg)\n",
+    "Notons :\n",
     "\n",
-    "## Dromotherm\n",
+    " - $Q_{ECS}$ le besoin instantanné en ECS exprimé en W\n",
     "\n",
+    " - $T_{eau}$ la température de l'eau du réseau, que l'on choisit de modéliser comme une fonction sinusoidale de période annuelle\n",
+    " \n",
+    " - $V$ la consommation d'eau moyenne journalière exprimée en litre, pour une personne seule\n",
+    " \n",
+    " - $N_{pers}$ le nombre de personnes occupant le bâtiment\n",
+    " \n",
+    " - $Cp_{eau}$ la capacité calorifique de l'eau exprimée en $\\frac{J}{kg K}$\n",
+    " \n",
+    " - $T_{ballon}$, la température de l'eau chaude stockée dans le ballon (60°C)\n",
+    "\n",
+    "    \n",
+    "\\begin{equation} \n",
+    "   Q_{ECS}= \\frac{V*N_{pers}*(T_{ballon}-T_{eau})*Cp_{eau}}{24*3600}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## bilan sur le bâtiment\n",
+    "\n",
+    "On a :\n",
+    "\n",
+    "\\begin{equation} \n",
+    "   besoin  = Q_{ECS} + Q_{chauffage}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dromotherm\n",
     "\n",
     "\\begin{equation}\n",
     "C_s h_s\\frac{\\partial T_s}{\\partial t}=(1-\\alpha)R_g(t)+ R_{atm}(t) -\\epsilon\\sigma T_s^{4}-H_v(T_s-T_{ext}(t))-r_{s/d}(T_s-T_f)\n",
@@ -253,256 +290,80 @@
     "C_b h_{b2}\\frac{\\partial T_{b2}}{\\partial t}= r_{b1/b2}(T_{b1}-T_{b2})\n",
     "\\end{equation}\n",
     "\n",
-    "## Echangeur thermique\n",
+    "Par descente de gradient, un modèle 1D a été fitté pour coller au modèle 2D développé par le Cerema en langage fortran. Une fonction python, appelée dromo.iterate dans l'algorithme, permet de calculer la température en sortie de dromotherm, avant que le fluide s'engage dans l'échangeur de séparation de réseau pour venir alimenter le stockage en chaleur.\n",
     "\n",
-    "\\begin{equation}\n",
-    "T_{inj\\_dro} = T_{sor\\_dro} - eff * (T_{sor\\_dro} - T_{sor\\_sto})\n",
-    "\\end{equation}\n",
+    "Le calcul utilise : \n",
     "\n",
-    "## Stockage\n",
+    "- les données météo de l'instant en cours, à savoir la temperature d'air **exprimée en kelvin**, les rayonnement global et atmosphérique exprimés en $\\frac{W}{m^2}$ ainsi que la vitesse du vent en $\\frac{m}{s}$\n",
     "\n",
-    "\\begin{equation}\n",
-    "T_{inj\\_sto}  =  \\frac{ (m_{sto} * Cp_{sto} + \\frac{k}{2})  T_{sor\\_sto} - k T_{stock} }{m_{sto} * Cp_{sto} - \\frac{k}{2}}\n",
-    "\\end{equation}\n",
+    "- la température d'injection du fluide dans le dromotherme **exprimée en kelvin**\n",
     "\n",
+    "- le débit unitaire du fluide dans le dromotherme $qdro_u$ exprimé en $\\frac{m^3}{s}$.\n",
     "\n",
-    "\\begin{equation}\n",
-    "T_{sor\\_sto} = \\frac{k T_{stock} + B * T_{sor\\_dro}}{k+B}\n",
-    "\\end{equation}\n",
-    "\n",
-    "## PAC\n",
-    "\n",
-    "\\begin{equation}\n",
-    "T_{sor\\_pac} = T_{inj\\_pac} - \\frac{P_{geo}}{m_{pac} * Cp_{pac}}\n",
-    "\\end{equation}\n",
-    "\n",
-    "\\begin{equation}\n",
-    "T_{inj\\_pac}  = T_{stock}-\\frac{C Pgeo}{k}\n",
-    "\\end{equation}\n",
-    "\n",
-    "## Température stockage\n",
-    "###  1er cas :Dromotherm seul en marche \n",
-    "\n",
-    "\\begin{equation}\n",
-    "    m_{sable} Cp_{sable} \\frac {dT_{stock}}{dt}=m_{sto} Cp_{sto} ( T_{inj\\_sto} - T_{sor\\_sto} )\n",
-    "\\end{equation}\n",
-    "\n",
-    "### 2ème cas :PAC seule  en marche\n",
-    "\n",
-    "\\begin{equation}\n",
-    "    m_{sable} Cp_{sable} \\frac {dT_{stock}}{dt}= m_{pac} Cp_{pac} (T_{sor\\_pac}- T_{inj\\_pac})\n",
-    "\\end{equation}\n",
-    "\n",
-    "### 3me cas : Dromotherm et PAC en marche\n",
-    "\n",
-    "\\begin{equation}\n",
-    "    m_{sable} Cp_{sable} \\frac {dT_{stock}}{dt}=m_{sto} Cp_{sto} ( T_{inj\\_sto} - T_{sor\\_sto} ) + m_{pac} Cp_{pac} (T_{sor\\_pac}- T_{inj\\_pac})\n",
-    "\\end{equation}\n",
-    "\n",
-    "## Bâtiment\n",
-    "\\begin{equation} \n",
-    "   besoin_{chauffage}=(Tconsigne-Text)*(\\frac {1}{Rm+Ri}+ \\frac {1}{Rf} )\n",
-    "\\end{equation}\n",
-    "\n",
-    "\n",
-    "\\begin{equation} \n",
-    "   besoin_{ECS}= Volume_{ballon}*N_{pers}*(T_{ballon}-T{eau})*Cp_{eau}/(24*3600)\n",
-    "\\end{equation}\n"
+    "Par débit unitaire, on entend le débit pour un mètre linéaire de chaussée selon le profil en long.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SCHEMA NUMERIQUE\n",
+    "# Equation du stockage\n",
     "\n",
-    "Soit $t_i $, l'instant courant.\n",
-    "\n",
-    "## Dromotherm\n",
-    "Le schema numérique se résume à :\n",
-    "\n",
-    "\\begin{equation} \n",
-    "   T_{sor\\_dro}(t_i)=D(t_i,T(t_{i-1}),T_{inj\\_dro}(t_{i-1})\n",
-    "\\end{equation}\n",
-    "\n",
-    "avec :\n",
-    "\n",
-    "\\begin{equation} \n",
-    "   T(t_i)=[Ts(t_i),Tf(t_i),Tb1(t_i),Tb2(t_i)]\n",
-    "\\end{equation}\n",
-    "\n",
-    "## Echangeur thermique\n",
-    "\n",
-    "\\begin{equation}\n",
-    "T_{inj\\_dro}(t_i) = T_{sor\\_dro}(t_i) - eff * (T_{sor\\_dro}(t_i) - T_{sor\\_sto}(t_i))\n",
-    "\\end{equation}\n",
-    "\n",
-    "\n",
-    "## Stockage\n",
-    "\n",
-    "\\begin{equation}\n",
-    "T_{inj\\_sto}(t_i)  =  \\frac{ (m_{sto} * Cp_{sto} + \\frac{k}{2})  T_{sor\\_sto}(t_i) - k T_{stock}(t_i) }{m_{sto} * Cp_{sto} - \\frac{k}{2}}\n",
-    "\\end{equation}\n",
-    "\n",
-    "\n",
-    "\\begin{equation}\n",
-    "T_{sor\\_sto}(t_i) = \\frac{k T_{stock}(t_i) + B * T_{sor\\_dro}(t_i)}{k+B}\n",
-    "\\end{equation}\n",
-    "\n",
-    "## PAC\n",
-    "\n",
-    "\\begin{equation}\n",
-    "T_{inj\\_pac}(t_i)  = T_{stock}(t_i)-\\frac{C Pgeo(t_i)}{k}\n",
-    "\\end{equation}\n",
-    "\n",
-    "\n",
-    "\\begin{equation}\n",
-    "T_{sor\\_pac}(t_i) = T_{inj\\_pac}(t_i) - \\frac{P_{geo}(t_i)}{m_{pac} * Cp_{pac}}\n",
-    "\\end{equation}\n",
-    "\n",
-    "\n",
-    "## Température stockage\n",
-    "\n",
-    "Les équations régissant la température du stockage dans chaque est une équation différentielle d'ordre 1 sous la forme:\n",
-    "\n",
-    "\\begin{equation}\n",
-    "     \\frac {dT_{stock}}{dt}= F (t,T_{stock})\n",
-    "\\end{equation}\n",
-    "\n",
-    "Suivant la méthode Euler explicite on a :\n",
-    "\\begin{equation}\n",
-    " T_{stock}(t_{i})=T_{stock}(t_{i})+ dt *F (t_{i-1},T_{stock}(t_{i-1})\n",
-    "\\end{equation}\n",
-    "## Bâtiment\n",
-    "\n",
-    "\\begin{equation} \n",
-    "   besoin_{chauffage}(t_i)=(Tconsigne-Text(t_i))*(\\frac {1}{Rm+Ri}+ \\frac {1}{Rf} )\n",
-    "\\end{equation}\n",
-    "\n",
-    "\\begin{equation} \n",
-    "   besoin_{ECS}(t_i)= Volume_{ballon}*N_{pers}*(T_{ballon}-T{eau}(t_i))*Cp_{eau}/(24*3600)\n",
-    "\\end{equation}"
+    "![couplage](images/couplage2.jpg)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ALGORITHME DE RESOLUTION\n",
+    "Notons :\n",
     "\n",
-    "## Phase d'initialisation (t=0)\n",
-    " A l'instant initial, tout le système est supposé être à l'arrêt et toutes les températures égales à une valeur $T_{ini}$\n",
-    " \n",
-    " ## Phase itérative ( t>0)\n",
-    " \n",
-    " La procédure itérative de calcul des inconnues se présente comme suit:\n",
-    " \n",
-    " ### I- Choix du  fonctionnement du démonstrateur\n",
-    " \n",
-    " Le démonstrateur peut fonctionner de 8  manières. L'utilisateur choisit:\n",
+    "- $m_{sable}$ la masse de sable humide (sable sec + eau ) contenue dans le stockage et exprimée en kg\n",
     "\n",
-    "En été:\n",
+    "- $Cp_{sable}$ la capacité calorifique massique du sable humide en J/Kg.K\n",
     "\n",
-    " 1. Dromotherm ON et PAC ON\n",
-    " \n",
-    " 2. Dromotherm ON et PAC OFF\n",
-    " \n",
-    " 3. Dromotherm OFF et PAC ON\n",
-    " \n",
-    " 4. Dromotherm OFF et PAC OFF\n",
+    "Pour simplifier et faciliter la lecture, l'équation ci-dessous correspond au seul cas où le dromotherm et la PAC sont en fonctionnement simultané :\n",
     "\n",
-    "En hivers:\n",
+    "\\begin{equation}\n",
+    "    m_{sable} Cp_{sable} \\frac {dy}{dt}=m_{sto} Cp_{sto} ( T_{inj\\_sto} - T_{sor\\_sto} ) + m_{pac} Cp_{pac} (T_{sor\\_pac}- T_{inj\\_pac})\n",
+    "\\end{equation}\n",
     "\n",
-    "1. Dromotherm ON et PAC ON\n",
-    " \n",
-    "2. Dromotherm ON et PAC OFF\n",
-    " \n",
-    "3. Dromotherm OFF et PAC ON\n",
-    " \n",
-    "4. Dromotherm OFF et PAC OFF\n",
+    "Dans l'algorithme, il conviendra de traiter les autres cas de figure (dromotherme seul en fonctionnement, PAC seule en fonctionnement, aucun des 2 équipements en fonctionnement)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Algorithme de résolution\n",
     "\n",
-    "NB: PAC ON = chauffage et/ ou ECS\n",
+    "Notons :\n",
     "\n",
+    "- i l'indice temporel\n",
     "\n",
+    "- DRO le booléen indiquant si le dromotherme est en marche\n",
     "\n",
+    "- PAC le booléen indiquant si la PAC est en marche\n",
     "\n",
+    "- step le pas de temps exprimé en secondes\n",
     "\n",
+    "Le schéma ci-dessous décrit une itération du système complet, pour passer de l'indice i-1 à i\n",
     "\n",
-    "### II- Calculer  La variation temporelle de la Température du stockage suivant chaque cas\n",
+    "Dans les parties précédantes du notebook, nous avons utilisé la notation y pour représenter la température du sable dans le stockage. Dans l'algorithme, y est remplacé par la notation Tsable et sa dérivée temporelle est notée diff.\n",
     "\n",
-    "1. Dromotherm ON et PAC ON\n",
+    "En appliquant le schéma de discrétisation d'Euler explicite, on peut écrire :\n",
     "\n",
-    "   $der=\\frac{m_{sto} Cp{sto} (T_{inj\\_sto}(t_{i})-T_{sor\\_sto}(t_{i}))-P_{geo}(t_i)}{m_{sable} Cp{sable}}  $\n",
-    "  \n",
-    "  \n",
-    "  \n",
-    "2. Dromotherm ON et PAC OFF\n",
-    "   \n",
-    "   $der=\\frac{m_{sto} Cp{sto} (T_{inj\\_sto}(t_{i})-T_{sor\\_sto}(t_{i}))}{m_{sable} Cp{sable}}  $\n",
-    "   \n",
-    "   \n",
-    "   \n",
-    "3. Dromotherm OFF et PAC ON\n",
+    "\\begin{equation}\n",
+    " T_{sable}(i) = T_{sable}(i-1)+ step * \\frac {dT_{sable}}{dt}(i) = T_{sable}(i-1)+ step * diff(i)\n",
+    "\\end{equation}\n",
     "\n",
-    "    $der=\\frac{-P_{geo}(t_i)}{m_{sable} Cp{sable}}  $\n",
+    "![](images/logigramme_algorithme_2.gif)\n",
     "\n",
-    "    \n",
+    "A l'instant initial, la température d'injection du fluide dans le dromotherme est prise égale à 10°C\n",
     "\n",
-    "4. Dromotherm OFF et PAC OFF\n",
+    "Cet algorithme a été codé sous la forme d'un module python appelé sencity (cf documentation en ligne : https://seviprince.github.io/dromotherm/index.html)\n",
     "\n",
-    "    $der=0$\n",
-    "   \n",
-    "   \n",
-    " ### III- Calculer la Température du stockage par la méthode de Euler explicite\n",
-    " \n",
-    " $T_{stock}(t_{i})=T_{stock}(t_{i})+ dt *der$ \n",
-    " \n",
-    " \n",
-    " \n",
-    " ### IV- Calculer les températures des fluides circulant dans le domotherm, l'échangeur et la PAC\n",
-    " \n",
-    " 1. Si Dromotherm ON\n",
-    " \n",
-    "   Calculer $T_{sor\\_dro}(t_i)$ en fonction de $T_{inj\\_dro}(t_{i-1})$ et du débit unitaire qdro_u\n",
-    " \n",
-    "   Calcluer $T_{sor\\_sto}(t_i)$ par $T_{sor\\_sto}(t_i) = \\frac{k T_{stock}(t_i) + B * T_{sor\\_dro}(t_i)}{k+B}$ \n",
-    "   \n",
-    "   Calculer $T_{inj\\_sto}(t_i)$ par $ T_{inj\\_sto}(t_i) =  \\frac{ (m_{sto} * Cp_{sto} + \\frac{k}{2})  T_{sor\\_sto}(t_i) - k        T_{stock}(t_i) }{m_{sto} * Cp_{sto} - \\frac{k}{2}}$\n",
-    "   \n",
-    "   Calculer $T_{inj\\_dro}(t_i)$ par $T_{inj\\_dro}(t_i) = T_{sor\\_dro}(t_i) - eff * (T_{sor\\_dro}(t_i) - T_{sor\\_sto}(t_i))$\n",
-    "   \n",
-    " \n",
-    " 2. Si Dromotherm OFF\n",
-    " \n",
-    "  Calculer $T_{sor\\_dro}(t_i)$ en fonction de $T_{inj\\_dro}(t_{i-1})$ et du débit nul \n",
-    "  \n",
-    "  Calculer $T_{inj\\_dro}(t_i)$ par $T_{inj\\_dro}(t_i) = T_{sor\\_dro}(t_i-1)$\n",
-    " \n",
-    "  Calcluer $T_{sor\\_sto}(t_i)$ par $T_{sor\\_sto}(t_i) = T_{sor\\_sto}(t_i-1)$ \n",
-    "   \n",
-    "  Calculer $T_{inj\\_sto}(t_i)$ par $ T_{inj\\_sto}(t_i) = T_{inj\\_sto}(t_i-1) $     \n",
-    "  \n",
-    "  \n",
-    " 3. Si la PAC ON\n",
-    " \n",
-    " Calculer $T_{inj\\_pac}(t_i)$ par  $T_{inj\\_pac}(t_i) = T_{stock}(t_i)-\\frac{C Pgeo(t_i)}{k}$\n",
-    " \n",
-    " Calculer $T_{sor\\_pac}(t_i)$ par   $T_{sor\\_pac}(t_i)= T_{inj\\_pac}(t_i) - \\frac{P_{geo}(t_i)}{m_{pac} * Cp_{pac}}$\n",
-    " \n",
-    " \n",
-    " 4. Si la PAC OFF\n",
-    " \n",
-    " Calculer $T_{inj\\_pac}(t_i)$ par  $T_{inj\\_pac}(t_i) = T_{inj\\_pac}(t_i-1)$\n",
-    " \n",
-    " Calculer $T_{sor\\_pac}(t_i)$ par   $T_{sor\\_pac}(t_i)= T_{sor\\_pac}(t_i-1)$\n",
-    " \n",
-    " La procédure recommence à l'étape I\n",
-    "\n",
-    "\n",
-    "\n",
-    " \n",
-    "\n",
-    "\n"
+    "On pourrait poursuivre en faisant tourner le code en live, en important la bibilothèque"
    ]
   },
   {
@@ -514,6 +375,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Aucun(e)",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
