couplage notebook improvment 3

--- a/01_couplage.ipynb
+++ b/01_couplage.ipynb
@@ -14,6 +14,7 @@
     "# Equilibre énergétique de l'échangeur de séparation de réseau\n",
     "\n",
     "On note :\n",
+    "\n",
     "- $m_{dro}$ le débit massique du fluide dans le dromotherme en $\\frac{kg}{s}$\n",
     "\n",
     "- $Cp_{dro}$ la capacité thermique du fluide circulant dans le dromotherme en  $\\frac{J}{kg K}$\n",
@@ -88,7 +89,11 @@
     "T_{sor\\_sto} + coeff * eff * (T_{sor\\_dro} - T_{sor\\_sto}) = \\frac{(m_{sto} * Cp_{sto} + \\frac{k}{2} )  T_{sor\\_sto} - k y} {m_{sto} * Cp_{sto} - \\frac{k}{2}}\n",
     "\\end{equation}\n",
     "\n",
-    "En posant $ B = coeff * eff  * (m_{sto} * Cp_{sto} - \\frac{k}{2})$\n",
+    "En posant \n",
+    "\n",
+    "\\begin{equation}\n",
+    "B = coeff * eff  * (m_{sto} * Cp_{sto} - \\frac{k}{2})\n",
+    "\\end{equation}\n",
     "\n",
     "On obtient :\n",
     "\n",
@@ -130,9 +135,16 @@
     "On note :\n",
     "\n",
     "- $P_{geo}$ la puissance géothermique à extraire du stockage en  W\n",
+    "\n",
     "- $besoin$ le besoin énergétique du bâtiment à satisfaire en W\n",
-    "- $P_{elec}$ la puissance électrique de la PAC en  W\n",
+    "\n",
+    "- $P_{elec}$ la puissance électrique de la PAC en W\n",
+    "\n",
     "- COP  le coefficient de performance de la PAC\n",
+    "\n",
+    "- $m_{pac}$ le débit dans la PAC en $\\frac{kg}{s}$\n",
+    "\n",
+    "- $Cp_{pac}$ la capacité thermique du fluide dans la PAC en $\\frac{J}{kg.K}$\n",
     "\n",
     "On a : $besoin = P_{elec} + P_{geo}$\n",
     "\n",
@@ -183,7 +195,7 @@
     "\n",
     "## cas du chauffage\n",
     "\n",
-    "![Schema RC](images/RC_simple.png)"
+    "![modèle simplifié de bâtiment de type RC](images/RC_simple.png)"
    ]
   },
   {
@@ -309,7 +321,7 @@
    "source": [
     "# Equation du stockage\n",
     "\n",
-    "![couplage](images/couplage2.jpg)"
+    "![schéma simplifié du système](images/couplage2.png)"
    ]
   },
   {
@@ -357,7 +369,7 @@
     " T_{sable}(i) = T_{sable}(i-1)+ step * \\frac {dT_{sable}}{dt}(i) = T_{sable}(i-1)+ step * diff(i)\n",
     "\\end{equation}\n",
     "\n",
-    "![](images/logigramme_algorithme_2.gif)\n",
+    "![algorithme général](images/logigramme_algorithme_2.png)\n",
     "\n",
     "A l'instant initial, la température d'injection du fluide dans le dromotherme est prise égale à 10°C\n",
     "\n",
@@ -391,7 +403,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
+  },
+  "latex_metadata": {
+   "affiliation": "Dromotherm@Cerema/Locie",
+   "author": "Alexandre CUER, Fébron SEVI, Frédéric BERNARDIN, Benoit STUTZ",
+   "title": "modélisation énergétique d'un dromotherme couplé à un bâtiment via un stockage et une pompe à chaleur"
   }
  },
  "nbformat": 4,
