couplage notebook improvment 4

--- a/01_couplage.ipynb
+++ b/01_couplage.ipynb
@@ -234,10 +234,10 @@
     "\\end{equation}\n",
     "\n",
     "\n",
-    "Pour maintenir Tint constante et égale à Tconsigne, on doit donc développer :\n",
+    "Pour maintenir $T_{int}$ constante et égale à $T_{consigne}$, on doit donc développer :\n",
     "\n",
     "\\begin{equation} \n",
-    "   Q_{chauffage} = (Tconsigne-Text)*(\\frac {1}{Rm+Ri}+ \\frac {1}{Rf} )\n",
+    "   Q_{chauffage} = (T_{consigne}-T_{ext})*(\\frac {1}{Rm+Ri}+ \\frac {1}{Rf} )\n",
     "\\end{equation}"
    ]
   },
