couplage notebook improvment 5

--- a/01_couplage.ipynb
+++ b/01_couplage.ipynb
@@ -15,6 +15,8 @@
     "\n",
     "On note :\n",
     "\n",
+    "- $eff$ l'efficacité de l'échangeur de séparation de réseau (on prendra une valeur de 0.8)\n",
+    "\n",
     "- $m_{dro}$ le débit massique du fluide dans le dromotherme en $\\frac{kg}{s}$\n",
     "\n",
     "- $Cp_{dro}$ la capacité thermique du fluide circulant dans le dromotherme en  $\\frac{J}{kg K}$\n",
@@ -284,7 +286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dromotherm\n",
+    "# Température de sortie de dromotherm\n",
     "\n",
     "\\begin{equation}\n",
     "C_s h_s\\frac{\\partial T_s}{\\partial t}=(1-\\alpha)R_g(t)+ R_{atm}(t) -\\epsilon\\sigma T_s^{4}-H_v(T_s-T_{ext}(t))-r_{s/d}(T_s-T_f)\n",
@@ -312,7 +314,9 @@
     "\n",
     "- le débit unitaire du fluide dans le dromotherme $qdro_u$ exprimé en $\\frac{m^3}{s}$.\n",
     "\n",
-    "Par débit unitaire, on entend le débit pour un mètre linéaire de chaussée selon le profil en long.\n"
+    "Par débit unitaire, on entend le débit pour un mètre linéaire de chaussée selon le profil en long.\n",
+    "\n",
+    "Lorsque le dromotherme est à l'arrêt, la température de sortie de dromotherm est obtenue par le même calcul, avec un débit unitaire nul "
    ]
   },
   {
